fix: 오류 발생 테스트 문제 해결
- LineResponse와 LineSectionResponse 분리